DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-15-2002 nonchocoboy Integated editors with the ConfigBroker and contexts.
                        NEW VERSION: 0.8.0
Aug-15-2002 nonchocoboy Added ability to add new values to properties with
                        variable-length values.
Aug-14-2002 nonchocoboy Introduced the concept of a configuration context which
                        provides a view into a subset of the open files which
                        together make up a configuration.
Aug-09-2002 patrickh    Made compilation of the C++ remote reconfiguration code
                        optional.
Aug-06-2002 patrickh    Developer installations are now constructed using the
                        standard installation targets.
Aug-02-2002 jahare      Initial version of the new C++ remote reconfiguration
                        code added.
Jul-30-2002 nonchocoboy Added ConfigBroker Tweek service to be the intermediary
                        between a view unto a configuration and the files that
                        make up that configuration.
Jul-16-2002 nonchocoboy Merged changes from jccl_tweek_conversion2_branch.
                        New ChunkDescDB editor Tweek bean created. VjControl
                        is now dead. The VRJConfig Tweek bean in the vrjuggler
                        project replaces it using the generic editing
                        components provided by JCCL.
                        NEW VERSION: 0.5.0
Jul-12-2002 patrickh    jccl::ConfigChunkDB no longer derives from std::vector.
                        jccl::ChunkDescDB no longer derives from std::map.
                        NEW VERSION: 0.4.0
Jul-02-2002 nonchocoboy New ConfigChunkDB editor edits ConfigChunks through the
                        property sheet UI model.
Jun-24-2002 patrickh    The jccl-config script is now written in Perl.  It is